// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/modal/LoginModal create account error 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="login-modal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Sign in/Create account
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Signing in will sync your settings across multiple browsers or devices.
        </p>
        <p>
          When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
        </p>
        <form>
          <div>
            <button
              class="btn"
              id="googleSignIn"
              type="button"
            >
              <img
                alt="Google logo"
                src="test-file-stub"
                style="margin-inline-end: 6px;"
              />
              Sign in with Google
            </button>
          </div>
          <h3>
            Sign in with email
          </h3>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              autocomplete="username"
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="loginPassword"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="form-control"
              id="loginPassword"
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <a
              href=""
              id="buttonOpenForgottenPassword"
            >
              Forgotten password?
            </a>
          </div>
          <div>
            <button
              class="btn btn-default"
              type="submit"
            >
              Sign in
            </button>
            <button
              class="btn"
              id="createAccountButton"
              style="margin-inline-start: 6px;"
              type="button"
            >
              Create account
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal forgotten password modal control 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="login-modal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Sign in/Create account
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Signing in will sync your settings across multiple browsers or devices.
        </p>
        <p>
          When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
        </p>
        <form>
          <div>
            <button
              class="btn"
              id="googleSignIn"
              type="button"
            >
              <img
                alt="Google logo"
                src="test-file-stub"
                style="margin-inline-end: 6px;"
              />
              Sign in with Google
            </button>
          </div>
          <h3>
            Sign in with email
          </h3>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              autocomplete="username"
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="loginPassword"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="form-control"
              id="loginPassword"
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <a
              href=""
              id="buttonOpenForgottenPassword"
            >
              Forgotten password?
            </a>
          </div>
          <div>
            <button
              class="btn btn-default"
              type="submit"
            >
              Sign in
            </button>
            <button
              class="btn"
              id="createAccountButton"
              style="margin-inline-start: 6px;"
              type="button"
            >
              Create account
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal happy path create account 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="login-modal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Sign in/Create account
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Signing in will sync your settings across multiple browsers or devices.
        </p>
        <p>
          When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
        </p>
        <form>
          <div>
            <button
              class="btn"
              id="googleSignIn"
              type="button"
            >
              <img
                alt="Google logo"
                src="test-file-stub"
                style="margin-inline-end: 6px;"
              />
              Sign in with Google
            </button>
          </div>
          <h3>
            Sign in with email
          </h3>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              autocomplete="username"
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="loginPassword"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="form-control"
              id="loginPassword"
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <a
              href=""
              id="buttonOpenForgottenPassword"
            >
              Forgotten password?
            </a>
          </div>
          <div>
            <button
              class="btn btn-default"
              type="submit"
            >
              Sign in
            </button>
            <button
              class="btn"
              id="createAccountButton"
              style="margin-inline-start: 6px;"
              type="button"
            >
              Create account
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal happy path create account 2`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="login-modal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Sign in/Create account
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Signing in will sync your settings across multiple browsers or devices.
        </p>
        <p>
          When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
        </p>
        <form>
          <div>
            <button
              class="btn"
              id="googleSignIn"
              type="button"
            >
              <img
                alt="Google logo"
                src="test-file-stub"
                style="margin-inline-end: 6px;"
              />
              Sign in with Google
            </button>
          </div>
          <h3>
            Sign in with email
          </h3>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              autocomplete="username"
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="loginPassword"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="form-control"
              id="loginPassword"
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <a
              href=""
              id="buttonOpenForgottenPassword"
            >
              Forgotten password?
            </a>
          </div>
          <div>
            <button
              class="btn btn-default"
              type="submit"
            >
              Sign in
            </button>
            <button
              class="btn"
              id="createAccountButton"
              style="margin-inline-start: 6px;"
              type="button"
            >
              Create account
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal happy path login 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="login-modal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Sign in/Create account
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Signing in will sync your settings across multiple browsers or devices.
        </p>
        <p>
          When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
        </p>
        <form>
          <div>
            <button
              class="btn"
              id="googleSignIn"
              type="button"
            >
              <img
                alt="Google logo"
                src="test-file-stub"
                style="margin-inline-end: 6px;"
              />
              Sign in with Google
            </button>
          </div>
          <h3>
            Sign in with email
          </h3>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              autocomplete="username"
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="loginPassword"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="form-control"
              id="loginPassword"
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <a
              href=""
              id="buttonOpenForgottenPassword"
            >
              Forgotten password?
            </a>
          </div>
          <div>
            <button
              class="btn btn-default"
              type="submit"
            >
              Sign in
            </button>
            <button
              class="btn"
              id="createAccountButton"
              style="margin-inline-start: 6px;"
              type="button"
            >
              Create account
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal happy path login 2`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="login-modal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Sign in/Create account
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Signing in will sync your settings across multiple browsers or devices.
        </p>
        <p>
          When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
        </p>
        <form>
          <div>
            <button
              class="btn"
              id="googleSignIn"
              type="button"
            >
              <img
                alt="Google logo"
                src="test-file-stub"
                style="margin-inline-end: 6px;"
              />
              Sign in with Google
            </button>
          </div>
          <h3>
            Sign in with email
          </h3>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              autocomplete="username"
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="loginPassword"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="form-control"
              id="loginPassword"
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <a
              href=""
              id="buttonOpenForgottenPassword"
            >
              Forgotten password?
            </a>
          </div>
          <div>
            <button
              class="btn btn-default"
              type="submit"
            >
              Sign in
            </button>
            <button
              class="btn"
              id="createAccountButton"
              style="margin-inline-start: 6px;"
              type="button"
            >
              Create account
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal login error 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="login-modal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Sign in/Create account
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Signing in will sync your settings across multiple browsers or devices.
        </p>
        <p>
          When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
        </p>
        <form>
          <div>
            <button
              class="btn"
              id="googleSignIn"
              type="button"
            >
              <img
                alt="Google logo"
                src="test-file-stub"
                style="margin-inline-end: 6px;"
              />
              Sign in with Google
            </button>
          </div>
          <h3>
            Sign in with email
          </h3>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              autocomplete="username"
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="loginPassword"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="form-control"
              id="loginPassword"
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <a
              href=""
              id="buttonOpenForgottenPassword"
            >
              Forgotten password?
            </a>
          </div>
          <div>
            <button
              class="btn btn-default"
              type="submit"
            >
              Sign in
            </button>
            <button
              class="btn"
              id="createAccountButton"
              style="margin-inline-start: 6px;"
              type="button"
            >
              Create account
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal renders error 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="login-modal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Sign in/Create account
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Signing in will sync your settings across multiple browsers or devices.
        </p>
        <p>
          When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
        </p>
        <form>
          <div
            class="alert alert-warning alert-dismissible"
            role="alert"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                class="glyphicon glyphicon-remove"
              />
            </button>
            Error message
          </div>
          <div>
            <button
              class="btn"
              id="googleSignIn"
              type="button"
            >
              <img
                alt="Google logo"
                src="test-file-stub"
                style="margin-inline-end: 6px;"
              />
              Sign in with Google
            </button>
          </div>
          <h3>
            Sign in with email
          </h3>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              autocomplete="username"
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="loginPassword"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="form-control"
              id="loginPassword"
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-group"
          >
            <a
              href=""
              id="buttonOpenForgottenPassword"
            >
              Forgotten password?
            </a>
          </div>
          <div>
            <button
              class="btn btn-default"
              type="submit"
            >
              Sign in
            </button>
            <button
              class="btn"
              id="createAccountButton"
              style="margin-inline-start: 6px;"
              type="button"
            >
              Create account
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/LoginModal renders loading 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="login-modal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Sign in/Create account
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Signing in will sync your settings across multiple browsers or devices.
        </p>
        <p>
          When you first sign in it will use your current settings to set up the account, but once an account is set-up logging in will overwrite any settings you stored as a guest.
        </p>
        <div>
          Loading
        </div>
      </div>
    </div>
  </div>
</div>
`;
